--- a/btcp/makefile
+++ b/btcp/makefile
@@ -1,6 +1,6 @@
 CFLAGS	=-I/usr/include/glib-2.0 -I/usr/lib/arm-linux-gnueabihf/glib-2.0/include
 CLIBS	=-lglib-2.0 -lpthread
-FILES	= tool.c circular_queue.c btcp_timeout.c btcp_send_queue.c btcp_range.c btcp_engine.c
+FILES	= tool.c btcp_engine.c btcp_timeout.c btcp_send_queue.c  btcp_recv_queue.c btcp_range.c  
 
 all: cli srv
 
