--- a/btcp/makefile
+++ b/btcp/makefile
@@ -1,4 +1,4 @@
-CFLAGS	=-I/usr/include/glib-2.0 -I/usr/lib/arm-linux-gnueabihf/glib-2.0/include
+CFLAGS	= -g -fsanitize=address -I/usr/include/glib-2.0 -I/usr/lib/arm-linux-gnueabihf/glib-2.0/include
 CLIBS	=-lglib-2.0 -lpthread
 FILES	= tool.c btcp_engine.c btcp_timeout.c btcp_send_queue.c  btcp_recv_queue.c btcp_range.c  
 
