--- a/btcp/makefile
+++ b/btcp/makefile
@@ -1,6 +1,6 @@
 CFLAGS	= -g -fsanitize=address -I/usr/include/glib-2.0 -I/usr/lib/arm-linux-gnueabihf/glib-2.0/include
 CLIBS	=-lglib-2.0 -lpthread
-FILES	= tool.c btcp_engine.c btcp_timeout.c btcp_send_queue.c  btcp_recv_queue.c btcp_range.c  
+FILES	= tool.c btcp_engine.c btcp_timeout.c btcp_send_queue.c  btcp_recv_queue.c btcp_range.c  btcp_rtt.c
 
 all: cli srv
 
@@ -13,5 +13,5 @@ srv:tcpsrv.c $(FILES)
 clean: 
 	rm *.o cli srv
 
-ttx:btcp_range.c
-	gcc -o ttx btcp_range.c $(CFLAGS) $(CLIBS)
+ttx:btcp_rtt.c tool.c
+	gcc -o ttx $^ $(CFLAGS) $(CLIBS)
