--- a/btcp/makefile
+++ b/btcp/makefile
@@ -1,6 +1,7 @@
 CFLAGS	= -g -fsanitize=address -I/usr/include/glib-2.0 -I/usr/lib/arm-linux-gnueabihf/glib-2.0/include
 CLIBS	=-lglib-2.0 -lpthread
-FILES	= tool.c btcp_engine.c btcp_timeout.c btcp_send_queue.c  btcp_recv_queue.c btcp_range.c  btcp_rtt.c
+FILES	=  btcp_engine.c btcp_timeout.c btcp_send_queue.c  btcp_recv_queue.c   btcp_rtt.c \
+			btcp_selective_ack_blocklist.c tool.c
 
 all: cli srv
 
